versions/v4.2.0/doxygen/html/structmqtt__suback__param.md
---
version: v4.2.0
source_url: https://docs.zephyrproject.org/4.2.0/doxygen/html/structmqtt__suback__param.html
original_path: doxygen/html/structmqtt__suback__param.html
---

| Logo | Zephyr API Documentation 4.2.0  A Scalable Open Source RTOS |
| --- | --- |

Loading...

Searching...

No Matches

mqtt\_suback\_param Struct Reference

[Connectivity](group__connectivity.md) » [Networking](group__networking.md) » [MQTT Client library](group__mqtt__socket.md)

Parameters for MQTT subscription acknowledgment (SUBACK).
[More...](#details)

`#include <[zephyr/net/mqtt.h](mqtt_8h_source.md)>`

| Data Fields | |
| --- | --- |
| [uint16\_t](stdint_8h.md#a5debae8b2a1ec20a6694c0c443ee399e) | [message\_id](#a985b53444e7b2c10ab68844fcee34ee4) |
|  | Message id of the SUBSCRIBE message being acknowledged. |
| struct [mqtt\_binstr](structmqtt__binstr.md) | [return\_codes](#a94ef5183aa3438db0521f445650c5868) |
|  | MQTT 3.1 - Return codes indicating maximum QoS level granted for each topic in the subscription list. |
| struct [mqtt\_common\_ack\_properties](structmqtt__common__ack__properties.md) | [prop](#a5f0eff81eef7d9dc0767addea0782bf5) |
|  | MQTT 5.0 properties. |

## Detailed Description

Parameters for MQTT subscription acknowledgment (SUBACK).

## Field Documentation

## [◆ ](#a985b53444e7b2c10ab68844fcee34ee4)message\_id

| [uint16\_t](stdint_8h.md#a5debae8b2a1ec20a6694c0c443ee399e) mqtt\_suback\_param::message\_id |
| --- |

Message id of the SUBSCRIBE message being acknowledged.

## [◆ ](#a5f0eff81eef7d9dc0767addea0782bf5)prop

| struct [mqtt\_common\_ack\_properties](structmqtt__common__ack__properties.md) mqtt\_suback\_param::prop |
| --- |

MQTT 5.0 properties.

## [◆ ](#a94ef5183aa3438db0521f445650c5868)return\_codes

| struct [mqtt\_binstr](structmqtt__binstr.md) mqtt\_suback\_param::return\_codes |
| --- |

MQTT 3.1 - Return codes indicating maximum QoS level granted for each topic in the subscription list.

MQTT 5.0 - Reason codes corresponding to each topic in the subscription list.

---

The documentation for this struct was generated from the following file:

- zephyr/net/[mqtt.h](mqtt_8h_source.md)

- [mqtt\_suback\_param](structmqtt__suback__param.md)
- Generated on  for Zephyr API Documentation by [![doxygen](https://docs.zephyrproject.org/4.2.0/doxygen/html/doxygen.svg)](https://www.doxygen.org/index.html) 1.16.1
